# Appletrun

./: README.md  entry.py  pyproject.toml
appletrun/: __main__.py
tests/: test_appletrun.py
