[tool.poetry]
name = "appletrun"
version = "0.1.14"
description = ""
authors = ["Royal-lobster <srujangs8@gmail.com>"]

packages = [
    { include = "appletrun" }
]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
appletrun = 'appletrun.__main__:main'