[tool.poetry]
name = "appletrun"
version = "1.8.0"
description = "✨ Appletrun takes java file as input and runs the applet instantly with out compilation and html files"
authors = ["Royal-lobster <srujangs8@gmail.com>"]
repository = "https://github.com/Royal-lobster/appletrun-python"
keywords = ["applet", "applet run", "appletrun"]
readme = "README.md"

packages = [
    { include = "appletrun" }
]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
appletrun = 'appletrun._main_:main'