[tool.poetry]
name = "appletrun"
version = "1.9.0"
description = "✨ Appletrun takes java file as input and runs the applet instantly with out compilation and html files"
authors = ["Royal-lobster <srujangs8@gmail.com>"]
repository = "https://github.com/Royal-lobster/appletrun-python"
keywords = ["applet", "applet run", "appletrun"]
readme = "README.md"

packages = [
    { include = "appletrun" }
]

[tool.poetry.dependencies]
python = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
appletrun = 'appletrun.__main__:main'